to revert loadgen3

--- a/loadgenerator-src/loadgenerator-v3/Dockerfile
+++ b/loadgenerator-src/loadgenerator-v3/Dockerfile
@@ -18,4 +18,4 @@ COPY locustfile.py .
 # enable gevent support in debugger
 ENV GEVENT_SUPPORT=True
 
-ENTRYPOINT locust --host="http://${FRONTEND_ADDR}" -u "${USERS:-10}" -r "${RATE}" --headless 2>&1
+ENTRYPOINT locust --host="http://${FRONTEND_ADDR}" -u "${USERS:-10}" -r "${RATE}" 2>&1
