--- a/tools/prometheus-adapter-config.yaml
+++ b/tools/prometheus-adapter-config.yaml
@@ -6,9 +6,9 @@ prometheus:
 rules:
   default: false
   custom:
-    - seriesQuery: '{__name__=~"istio_request_duration_milliseconds_.*",namespace!="",pod!="",reporter="source"}'
+    - seriesQuery: '{__name__=~"istio_request_duration_milliseconds_.*",namespace!="",pod!="",reporter='destination',response_code="200", response_flags="-",source_app!="unknown"}'
       seriesFilters:
-      - isNot: .*bucket
+      - is: .*bucket
       resources:
         overrides:
           namespace: 
@@ -17,8 +17,7 @@ rules:
              resource: pod
       name:
         matches: ^(.*)
-        as: "http_requests_restime_2m"
-      metricsQuery: 'sum(rate(istio_request_duration_milliseconds_sum{<<.LabelMatchers>>}[1m]) > 0) by (<<.GroupBy>>) / sum(rate(istio_request_duration_milliseconds_count{<<.LabelMatchers>>}[1m]) > 0) by (<<.GroupBy>>)'
-    
-  
+        as: "restime_99_percentile"
+      metricsQuery: 'histogram_quantile(0.99,rate(istio_request_duration_milliseconds_bucket{<<.LabelMatchers>>}[30s]))'
+
 
