--- a/tools/prometheus-adapter-config.yaml
+++ b/tools/prometheus-adapter-config.yaml
@@ -6,9 +6,7 @@ prometheus:
 rules:
   default: false
   custom:
-    - seriesQuery: '{__name__=~"istio_request_duration_milliseconds_.*",namespace!="",pod!="",reporter="destination",response_code="200", response_flags="-",source_app!="unknown"}'
-      seriesFilters:
-      - is: .*bucket
+    - seriesQuery: '{__name__=~"istio_request_duration_milliseconds_bucket.*",namespace!="",pod!="",reporter="destination",response_code="200", response_flags="-",source_app!="unknown"}'
       resources:
         overrides:
           namespace: 
@@ -18,7 +16,7 @@ rules:
       name:
         matches: ^(.*)
         as: "restime_99_percentile"
-      metricsQuery: 'histogram_quantile(0.99,rate(istio_request_duration_milliseconds_bucket{<<.LabelMatchers>>}[30s]))'
+      metricsQuery: 'histogram_quantile(0.99,rate(<<.Series>>{<<.LabelMatchers>>}[30s]))'
       
     - seriesQuery: '{__name__=~"istio_request_duration_milliseconds_.*",namespace!="",pod!="",reporter="source"}'
       seriesFilters:
