--- a/tools/prometheus-adapter-config.yaml
+++ b/tools/prometheus-adapter-config.yaml
@@ -6,7 +6,7 @@ prometheus:
 rules:
   default: false
   custom:
-    - seriesQuery: '{__name__=~"istio_request_duration_milliseconds_bucket.*",namespace!="",pod!="",reporter="destination",response_code="200", response_flags="-",source_app!="unknown"}'
+    - seriesQuery: '{__name__=~"istio_request_duration_milliseconds_bucket.*",namespace!="",pod!="",reporter="destination"}'
       resources:
         overrides:
           namespace: 
