--- a/loadgenerator-src/loadgenerator-v1/requirements.txt
+++ b/loadgenerator-src/loadgenerator-v1/requirements.txt
@@ -71,6 +71,6 @@ zope-event==4.6
     # via gevent
 zope-interface==5.5.2
     # via gevent
-
+numpy==1.24.2
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
