--- a/tools/prometheus-adapter-config.yaml
+++ b/tools/prometheus-adapter-config.yaml
@@ -16,7 +16,7 @@ rules:
       name:
         matches: ^(.*)
         as: "restime_99_percentile"
-      metricsQuery: 'histogram_quantile(0.99,rate(<<.Series>>{<<.LabelMatchers>>}[30s]))'
+      metricsQuery: 'histogram_quantile(0.99,rate(<<.Series>>{<<.LabelMatchers>>}[2m]))'
 
     - seriesQuery: 'istio_request_duration_milliseconds_bucket{reporter="destination",namespace!="",pod!=""}'
       resources:
@@ -28,7 +28,7 @@ rules:
       name:
         matches: ^(.*)
         as: "restime_90_percentile"
-      metricsQuery: 'histogram_quantile(0.99,rate(<<.Series>>{<<.LabelMatchers>>}[30s]))'
+      metricsQuery: 'histogram_quantile(0.99,rate(<<.Series>>{<<.LabelMatchers>>}[2m]))'
     
     - seriesQuery: 'istio_request_duration_milliseconds_bucket{reporter="destination",namespace!="",pod!=""}'
       resources:
@@ -40,7 +40,7 @@ rules:
       name:
         matches: ^(.*)
         as: "restime_50_percentile"
-      metricsQuery: 'histogram_quantile(0.50,rate(<<.Series>>{<<.LabelMatchers>>}[30s]))'
+      metricsQuery: 'histogram_quantile(0.50,rate(<<.Series>>{<<.LabelMatchers>>}[2m]))'
 
     - seriesQuery: '{__name__=~"istio_request_duration_milliseconds_.*",namespace!="",pod!="",reporter="source"}'
       seriesFilters:
