--- a/hpa-yaml/hpa-frontendservicev3.yaml
+++ b/hpa-yaml/hpa-frontendservicev3.yaml
@@ -16,7 +16,7 @@ spec:
         name: restime_99_percentile
       target:
         type: AverageValue
-        averageValue: 900000m # 900ms
+        averageValue: 850000m # 850ms
   - type: Pods
     pods:
       metric:
@@ -24,6 +24,13 @@ spec:
       target:
         type: AverageValue
         averageValue: 450000m # 450ms
+   - type: Pods
+    pods:
+      metric:
+        name: restime_50_percentile
+      target:
+        type: AverageValue
+        averageValue: 80000m # 80ms
   
   scaleTargetRef:
     apiVersion: apps/v1
