--- a/hpa-yaml/hpa-frontendservicev3.yaml
+++ b/hpa-yaml/hpa-frontendservicev3.yaml
@@ -6,9 +6,13 @@ metadata:
 spec:
   minReplicas: 1
   maxReplicas: 5
-  behavior:
+   behavior:
     scaleDown:
       stabilizationWindowSeconds: 60
+      policies:
+      - type: Pods
+        value: 1
+        periodSeconds: 180 
   metrics:
 
   - type: Pods
