--- a/tools/prometheus-adapter-config.yaml
+++ b/tools/prometheus-adapter-config.yaml
@@ -6,7 +6,7 @@ prometheus:
 rules:
   default: false
   custom: 
-    - seriesQuery: 'istio_request_duration_milliseconds_bucket{reporter="destination",namespace!="",pod!=""}'
+    - seriesQuery: 'istio_request_duration_milliseconds_bucket{reporter="destination",namespace!="",pod!="",source_app!="unknown"}'
       resources:
         overrides:
           namespace: 
@@ -16,7 +16,7 @@ rules:
       name:
         matches: ^(.*)
         as: "restime_99_percentile"
-      metricsQuery: 'histogram_quantile(0.99,rate(<<.Series>>{<<.LabelMatchers>>,response_code="200", response_flags="-",source_app!="unknown"}[30s]))'
+      metricsQuery: 'histogram_quantile(0.99,rate(<<.Series>>{<<.LabelMatchers>>,response_code="200", response_flags="-"}[30s]))'
 
     - seriesQuery: 'istio_request_duration_milliseconds_bucket{reporter="destination",namespace!="",pod!=""}'
       resources:
@@ -28,9 +28,9 @@ rules:
       name:
         matches: ^(.*)
         as: "restime_90_percentile"
-      metricsQuery: 'histogram_quantile(0.90,rate(<<.Series>>{<<.LabelMatchers>>,response_code="200", response_flags="-",source_app!="unknown"}[30s]))'
+      metricsQuery: 'histogram_quantile(0.90,rate(<<.Series>>{<<.LabelMatchers>>,response_code="200", response_flags="-"}[30s]))'
     
-    - seriesQuery: 'istio_request_duration_milliseconds_bucket{reporter="destination",namespace!="",pod!=""}'
+    - seriesQuery: 'istio_request_duration_milliseconds_bucket{reporter="destination",namespace!="",pod!="",source_app!="unknown"}'
       resources:
         overrides:
           namespace: 
@@ -40,7 +40,7 @@ rules:
       name:
         matches: ^(.*)
         as: "restime_50_percentile"
-      metricsQuery: 'histogram_quantile(0.50,rate(<<.Series>>{<<.LabelMatchers>>,response_code="200", response_flags="-",source_app!="unknown"}[30s]))'
+      metricsQuery: 'histogram_quantile(0.50,rate(<<.Series>>{<<.LabelMatchers>>,response_code="200", response_flags="-"}[30s]))'
 
     - seriesQuery: '{__name__=~"istio_request_duration_milliseconds_.*",namespace!="",pod!="",reporter="source"}'
       seriesFilters:
@@ -57,4 +57,3 @@ rules:
       metricsQuery: 'sum(rate(istio_request_duration_milliseconds_sum{<<.LabelMatchers>>}[1m]) > 0) by (<<.GroupBy>>) / sum(rate(istio_request_duration_milliseconds_count{<<.LabelMatchers>>}[1m]) > 0) by (<<.GroupBy>>)'
 
    
-
