--- a/hpa-yaml/hpa-frontendservice.yaml
+++ b/hpa-yaml/hpa-frontendservice.yaml
@@ -6,9 +6,9 @@ metadata:
 spec:
   minReplicas: 1
   maxReplicas: 5
-  # behavior:
-  #     scaleDown:
-  #       stabilizationWindowSeconds: 60
+  behavior:
+      scaleDown:
+        stabilizationWindowSeconds: 60
   metrics:
   - type: Resource
     resource:
