--- a/hpa-yaml/hpa-currencyservicev2.yaml
+++ b/hpa-yaml/hpa-currencyservicev2.yaml
@@ -5,10 +5,13 @@ metadata:
   namespace: default
 spec:
   minReplicas: 1
-  maxReplicas: 3
+  maxReplicas: 2
   behavior:
-      scaleDown:
-        stabilizationWindowSeconds: 60 
+    scaleDown:
+      policies:
+      - type: Pods
+        value: 1
+        periodSeconds: 300 
   metrics:
   - type: Pods
     pods:
@@ -16,7 +19,7 @@ spec:
         name: http_requests_restime_2m
       target:
         type: AverageValue
-        averageValue: 20000m # 200ms
+        averageValue: 1800m 
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
