--- a/hpa-yaml/hpa-reccservicev2.yaml
+++ b/hpa-yaml/hpa-reccservicev2.yaml
@@ -7,8 +7,11 @@ spec:
   minReplicas: 1
   maxReplicas: 3
   behavior:
-      scaleDown:
-        stabilizationWindowSeconds: 60
+    scaleDown:
+      policies:
+      - type: Pods
+        value: 1
+        periodSeconds: 300 
   metrics:
   - type: Pods
     pods:
@@ -16,7 +19,7 @@ spec:
         name: http_requests_restime_2m
       target:
         type: AverageValue
-        averageValue: 40000m # 400ms
+        averageValue: 4500m 
 
   scaleTargetRef:
     apiVersion: apps/v1
