--- a/hpa-yaml/hpa-currencyservicev2.yaml
+++ b/hpa-yaml/hpa-currencyservicev2.yaml
@@ -8,6 +8,7 @@ spec:
   maxReplicas: 2
   behavior:
     scaleDown:
+      stabilizationWindowSeconds: 120
       policies:
       - type: Pods
         value: 1
