--- a/hpa-yaml/hpa-frontendservicev2.yaml
+++ b/hpa-yaml/hpa-frontendservicev2.yaml
@@ -6,8 +6,9 @@ metadata:
 spec:
   minReplicas: 1
   maxReplicas: 5
-  behavior:
+  behavior:       
     scaleDown:
+      stabilizationWindowSeconds: 60
       policies:
       - type: Pods
         value: 1
