--- a/hpa-yaml/hpa-frontendservicev2.yaml
+++ b/hpa-yaml/hpa-frontendservicev2.yaml
@@ -12,7 +12,7 @@ spec:
       policies:
       - type: Pods
         value: 1
-        periodSeconds: 300 
+        periodSeconds: 240ss 
   metrics:
 
   - type: Pods
